Adds a database with mongodb

--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,8 @@
     </h1>
   </div>
   <form action="" class="search-form">
-    <input type="text" class="searchBar">
-    <input type="image" name="submit" src="./images/iconfinder_Search.png" alt="Submit" class="icon"/>
+    <input type="text" class="searchBar" name="search" />
+    <input type="image" src="./images/iconfinder_Search.png" class="icon"/>
   </form>
   <div id="div">
     <table id="tableResult"></table>
