--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,11 @@
     <table id="tableResult"></table>
   </div>
 
-  <div id="favourites">
-    <h1>Favourites</h1>
+  <div class="favesDiv">
+    <h3 class="favesTitle"></h3>
+    <div id="favourites">
+    </div>
   </div>
+
 </body>
 </html>
