--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,8 @@
 
   <div class="favesDiv">
     <h3 class="favesTitle"></h3>
-    <div id="favourites">
+    <div>
+      <table id="favourites"></table>
     </div>
   </div>
 
